[package]
name = "brexit"
version = "1.0.1"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"
description = "impl Drop but slowly"
readme = "README.md"
repository = "https://github.com/TheZoq2/brexit"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml5ever = "0.16.1"
markup5ever_rcdom = "0.1.0"
